# tests

aubo_moveit_config/config/: aubo_robot.srdf  joint_limits.yaml
aubo_moveit_config/launch/: aubo_moveit.launch.py
aubo_msgs/: CMakeLists.txt
aubo_msgs/msg/: RobotMode.msg
aubo_ros2_driver/: CMakeLists.txt  package.xml
aubo_ros2_driver/config/: aubo_controllers.yaml
aubo_ros2_driver/include/: aubo_hardware_interface.h
aubo_ros2_driver/launch/: aubo_control.launch.py
aubo_ros2_driver/src/: aubo_hardware_interface.cpp
aubo_sdk_client/: CMakeLists.txt  package.xml
aubo_sdk_client/include/aubo_sdk_client/: aubo_imitator.hpp  aubo_sdk_client.hpp
aubo_sdk_client/include/aubo_sdk_client/interface/: aubo_sdk_interface.hpp
aubo_sdk_client/src/: aubo_imitator.cpp  aubo_sdk_client.cpp
aubo_sdk_control/: CMakeLists.txt  package.xml
aubo_sdk_control/include/aubo_sdk_control/: aubo_sdk_control.hpp
aubo_sdk_control/src/: aubo_sdk_control.cpp
gazpom_device_client/: CMakeLists.txt  package.xml
gazprom_behavior/: CMakeLists.txt  package.xml
gazprom_behavior/include/: behavior_tree.hpp  behavior_tree_factory.hpp
gazprom_behavior/include/behavior_tree_node/action/: error_handler.hpp  get_number_cycle_paint.hpp  paint_counter_increment.hpp  set_mode.hpp
gazprom_behavior/include/behavior_tree_node/action/robot_action/: get_io.hpp  servo_move.hpp  set_io.hpp  stop_robot.hpp
gazprom_behavior/include/behavior_tree_node/check/: check_connection_robot.hpp
gazprom_behavior/include/behavior_tree_node/enums/: enum_list.hpp
gazprom_behavior/include/behavior_tree_node/is/: is_mark_selected.hpp  is_mode.hpp
gazprom_behavior/include/device/: dashboard.hpp  device_list.hpp  robot.hpp
gazprom_behavior/src/: behavior_tree.cpp  behavior_tree_factory.cpp  main.cpp
gazprom_behavior/src/behavior_tree_node/action/: error_handler.cpp  get_number_cycle_paint.cpp  paint_counter_increment.cpp  set_mode.cpp
gazprom_behavior/src/behavior_tree_node/action/robot_action/: get_io.cpp  servo_move.cpp  set_io.cpp  stop_robot.cpp
gazprom_behavior/src/behavior_tree_node/check/: check_connection_robot.cpp
gazprom_behavior/src/behavior_tree_node/is/: is_mark_selected.cpp  is_mode.cpp
gazprom_behavior/xml/: main.xml
gazprom_common/: CMakeLists.txt  package.xml
gazprom_common/launch/: full.launch.py
gazprom_dashboard/: CMakeLists.txt  package.xml
gazprom_dashboard/include/gazprom_dashboard/app/: dashboard.py
gazprom_dashboard/include/gazprom_dashboard/clients/: dashboard_client.py
gazprom_dashboard/include/gazprom_dashboard/device/: camera.py  display.py
gazprom_dashboard/include/gazprom_dashboard/tools/: py_tools.py  trigger_service.py
gazprom_msgs/: CMakeLists.txt  package.xml
gazprom_msgs/msg/: ManipulatorStatus.msg  OperatorMessage.msg  ParametrsPainting.msg  StatusSystem.msg
