<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aubo_sdk_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1q2s3c4g@bk.ru">cranemotor</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>aubo_msgs</build_depend>
  <build_depend>aubo_sdk_client</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>realtime_tools</build_depend>

  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>aubo_msgs</build_export_depend>
  <build_export_depend>aubo_sdk_client</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>rclcpp_components</build_export_depend>
  <build_export_depend>rclcpp_lifecycle</build_export_depend>
  <build_export_depend>realtime_tools</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
