<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazprom_behavior</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1q2s3c4g@bk.ru">cranemotor</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>behaviortree_cpp</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>behaviortree_cpp</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
